
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ FID ;
 scalar_t__ ProcessID ;
 scalar_t__ TID ;
 scalar_t__ UserID ;
 int exit (int) ;
 int fflush (int ) ;
 int memcpy (char*,scalar_t__*,int) ;
 int printf (char*,...) ;
 int send (int,char*,int,int ) ;
 int stdout ;
 scalar_t__ strcmp (char*,char*) ;

void send_packet(int sock, char *payload, int size,
char *type)
{
 int ntrans, ret;

 memcpy(&payload[30], &ProcessID, 2);

 if (UserID)
  memcpy(&payload[32], &UserID, 2);
 if (TID)
  memcpy(&payload[28], &TID, 2);

 if (strcmp(type, "Sending DCE RPC Bind UPNPMGR request") == 0) {
  memcpy(&payload[67], &FID, 2);
 }
 if (strcmp(type, "UPNPMGR upnp_getdevicelist request") == 0) {
  memcpy(&payload[41], &FID, 2);
 }

 printf("[*] %s: ", type);
 fflush(stdout);
 ntrans = send(sock, payload, size, 0);
 if (ntrans < 0) {
  printf("\033[0;31mFailed\033[0;39m\n\n");
  exit(-1);
 }
}
