; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1328.c_send_packet.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1328.c_send_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ProcessID = common dso_local global i64 0, align 8
@UserID = common dso_local global i64 0, align 8
@TID = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [37 x i8] c"Sending DCE RPC Bind UPNPMGR request\00", align 1
@FID = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [35 x i8] c"UPNPMGR upnp_getdevicelist request\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"[*] %s: \00", align 1
@stdout = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [23 x i8] c"\1B[0;31mFailed\1B[0;39m\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_packet(i32 %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 30
  %13 = call i32 @memcpy(i8* %12, i64* @ProcessID, i32 2)
  %14 = load i64, i64* @UserID, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %4
  %17 = load i8*, i8** %6, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 32
  %19 = call i32 @memcpy(i8* %18, i64* @UserID, i32 2)
  br label %20

20:                                               ; preds = %16, %4
  %21 = load i64, i64* @TID, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %20
  %24 = load i8*, i8** %6, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 28
  %26 = call i32 @memcpy(i8* %25, i64* @TID, i32 2)
  br label %27

27:                                               ; preds = %23, %20
  %28 = load i8*, i8** %8, align 8
  %29 = call i64 @strcmp(i8* %28, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %30 = icmp eq i64 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %27
  %32 = load i8*, i8** %6, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 67
  %34 = call i32 @memcpy(i8* %33, i64* @FID, i32 2)
  br label %35

35:                                               ; preds = %31, %27
  %36 = load i8*, i8** %8, align 8
  %37 = call i64 @strcmp(i8* %36, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  %38 = icmp eq i64 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %35
  %40 = load i8*, i8** %6, align 8
  %41 = getelementptr inbounds i8, i8* %40, i64 41
  %42 = call i32 @memcpy(i8* %41, i64* @FID, i32 2)
  br label %43

43:                                               ; preds = %39, %35
  %44 = load i8*, i8** %8, align 8
  %45 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* %44)
  %46 = load i32, i32* @stdout, align 4
  %47 = call i32 @fflush(i32 %46)
  %48 = load i32, i32* %5, align 4
  %49 = load i8*, i8** %6, align 8
  %50 = load i32, i32* %7, align 4
  %51 = call i32 @send(i32 %48, i8* %49, i32 %50, i32 0)
  store i32 %51, i32* %9, align 4
  %52 = load i32, i32* %9, align 4
  %53 = icmp slt i32 %52, 0
  br i1 %53, label %54, label %57

54:                                               ; preds = %43
  %55 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i64 0, i64 0))
  %56 = call i32 @exit(i32 -1) #3
  unreachable

57:                                               ; preds = %43
  ret void
}

declare dso_local i32 @memcpy(i8*, i64*, i32) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
